[package]
name = "microphone"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.1.0", default-features = false, features = ["actix-macros", "macros"] }
futures = "0.3.24"
ipnet = { version = "2.5.0", features = ["serde"] }
reqwest = { version = "0.11.11", features = ["json"] }
serde = { version = "1.0.144", features = ["derive"] }
toml = "0.5.9"
